--- a/src/index.less
+++ b/src/index.less
@@ -2,8 +2,8 @@
 @import "~antd/dist/antd.dark.less";
 
 :root {
-  --body-font-size: 16px;
-  --base-line-height: 22px;
+  --body-font-size: calc(12px + 0.5vw);
+  --base-line-height: calc(19px + 0.5vw);
   /* --body-color: #21aaab; */
   --body-color: #ffffff;
   --body-color-light: #333333;
